<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="main_screen">
    <PreferenceScreen
            android:key="interface_screen" android:title="@string/interface_screen" android:summary="@string/interface_scr_sum">
    	<CheckBoxPreference android:title="@string/fullscreenTitle" android:key="fullscreen" android:summary="@string/fullscreenSum"></CheckBoxPreference>
		<ListPreference android:key="typeface" android:title="@string/typeface" android:entries="@array/fontName" android:entryValues="@array/fontValue" android:defaultValue="0"></ListPreference>
		<ListPreference android:key="fontsize" android:title="@string/fontSize" android:entries="@array/fontSize" android:entryValues="@array/fontSize" android:defaultValue="16"></ListPreference>
		<!-- <ListPreference android:defaultValue="0" android:key="theme" android:title="@string/appTheme" android:entries="@array/themeName" android:entryValues="@array/fontValue"></ListPreference> -->
	</PreferenceScreen>
	<CheckBoxPreference android:key="sound" android:title="@string/soundTitle" android:summary="@string/soundSum" android:defaultValue="true"/>
    <CheckBoxPreference android:key="gestures" android:title="@string/using_gestures" android:summary="@string/gestures_sum" android:enabled="true"/>
</PreferenceScreen> 